# redirect-checker

./: Dockerfile  Makefile  exceptions.py  pyproject.toml  pytest.ini  readme.md  session.py  tests.py  url_checker.py
test_server/: __init__.py  main.py
