[tool.poetry]
name = "test-redirect"
version = "0.1.0"
description = ""
authors = ["Simba <simba@twimir.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
requests = "^2.27.1"
pytest = "^7.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
